# htils

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  macros.rs  string.rs
tests/: test.rs
